<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="SoCalBeach4Life"
        android:textSize="40sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:fontFamily="sans-serif-black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="50dp"
        />

    <EditText
        android:id="@+id/email"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:hint="Email Address"
        android:inputType="textEmailAddress"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/banner"

        />

    <EditText
        android:id="@+id/password"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        android:layout_marginTop="30dp"

        />

    <Button
        android:id="@+id/signIn"
        android:layout_width="380dp"
        android:layout_height="70dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#0ED6B9"
        android:text="Login"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"


        />

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Forgot Password?"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/signIn"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="50dp"

        />

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Register"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="@+id/forgotPassword"
        app:layout_constraintLeft_toRightOf="@+id/forgotPassword"
        android:layout_marginLeft="80dp"

        />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        />

</androidx.constraintlayout.widget.ConstraintLayout>